--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -51,7 +51,7 @@ Ex:
 
 :ghost: not good enough? the...
 
-#### call array[0] and pass it in as an argument on array[3]
+#### :round_pushpin: call array[0] and pass it in as an argument on array[3]
 
  Ex.
  
@@ -59,7 +59,7 @@ Ex:
     
     returns `hello James Hetfield`
     
-**might as well do the object one too then**:
+#### :round_pushpin: might as well do the object one too then:
 
 Ex.
 
