--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -67,3 +67,66 @@ Ex.
 - returns **The Fractured But Whole**
 
 ### :crossed_flags: Creating an array  (another way to create an array)
+
+````
+// short way of creating an array
+
+var names = [];
+Empty brackets will create an array in the variable names
+
+ 
+so can do this too:
+var names = ['john','mario','mark'];
+console.log(names);
+['john', 'mario', 'mark']
+````
+
+#### of course: loop/length
+
+Ex.  _**not just** about **loop/length** array basic_
+      b**ecause array**s can even **be 'scattered'** **too**.
+```
+    var names = ['john','mario','mark'];
+     
+    for (var i=0; i < names.length; i++) {
+        
+        console.log("hello " + names[i]);
+        
+    
+    }
+    
+    returns hello john
+    returns hello mario
+    returns hello mark
+    
+```    
+ 
+:round_pushpin: They don't have to be in order either, **they can be sparse**.  :part_alternation_mark:
+
+Ex.
+    names[100] = "Samuel";
+
+Now we have **an array that have 0, 1, 2 and 100 index**  
+ 
+So if i loop that: :roller_coaster:
+
+    var names = ['john', 'mario', 'mark'];
+    names[100] = 'samuel';
+    for(var i=0; i < names.lenght; i++) {
+        console.log("Hello " + names[i]);
+    }
+    
+      
+    >  hello john
+    >  hello mario
+    >  hello mark
+    
+     
+   >  (97)hello undefined     :warning: just to slow down n keep going
+    
+   
+    >  hello samuel
+      
+ 
+ h
+
