--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -66,7 +66,7 @@ Ex.
 - console.log(**array[3].course**);   
 - returns **The Fractured But Whole**
 
-### :crossed_flags: Creating an array  (another way to create an array)
+### :crossed_flags: Creating an array  (2nd way to create an array)
 
 ````
 // short way of creating an array
