--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -79,9 +79,13 @@ so can do this too:
 var names = ['john','mario','mark'];
 console.log(names);
 ['john', 'mario', 'mark']
-````
 
-#### of course: loop/length
+
+
+
+####  :curly_loop: of course: loop/length
+
+
 
 Ex.  _**not just** about **loop/length** array basic_
       b**ecause array**s can even **be 'scattered'** **too**.
