--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -126,11 +126,11 @@ So if i loop that: :roller_coaster:
     >  hello mark
     
      
-   >  (97)hello undefined     :warning: just to slow down n keep going
+   >  (97)hello undefined     :warning: there's nothing after mark until samuel.
     
    
     >  hello samuel
       
  
- h
+ 
 
