--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -121,16 +121,16 @@ So if i loop that: :roller_coaster:
     }
     
       
-    >  hello john
-    >  hello mario
-    >  hello mark
+    >  hello john  &nbsp;&nbsp;&nbsp; position 0
+    >  hello mario &nbsp;&nbsp;&nbsp; position 1
+    >  hello mark &nbsp;&nbsp;&nbsp;  position 2
     
      
    >  (97)hello undefined     :warning: there's nothing after mark until samuel.
-    
+     
    
-    >  hello samuel
+    >  hello samuel &nbsp;&nbsp;&nbsp; position 100
       
  
- 
+ ```
 
