--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -121,9 +121,9 @@ So if i loop that: :roller_coaster:
     }
 ```  
 ```     
- >  hello john      &nbsp;&nbsp;&nbsp; position 0       
+ >  hello john      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 0       
  >  hello mario &nbsp;&nbsp;&nbsp; position 1         
- >  hello mark     &nbsp;&nbsp;&nbsp; position 2        
+ >  hello mark     &nbsp;&nbsp;&nbsp;&nbsp; position 2        
 
 
  >  (97)hello undefined     :warning: there's nothing after mark until samuel.       
