--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -121,15 +121,15 @@ So if i loop that: :roller_coaster:
     }
 ```  
 ```     
- >  hello john      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 0       
- >  hello mario &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 1         
- >  hello mark     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 2        
+ >:low_brightness:  hello john      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 0       
+ >:low_brightness:  hello mario &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 1         
+ >:low_brightness:  hello mark     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 2        
 
 
- >  (97)hello undefined     :warning: there's nothing after mark until samuel.       
+ >:low_brightness:  (97)hello undefined     :warning: there's nothing after mark until samuel.       
 
 
- >  hello samuel   &nbsp;&nbsp;&nbsp; position 100    
+ >:low_brightness:  hello samuel   &nbsp;&nbsp;&nbsp; position 100    
       
  
 
