--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -120,6 +120,7 @@ So if i loop that: :roller_coaster:
         console.log("Hello " + names[i]);
     }
 ```  
+array data:
 ```     
  >:low_brightness:  hello john      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 0       
  >:low_brightness:  hello mario &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 1         
