--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -127,7 +127,7 @@ array data:
  >:low_brightness:  hello mark     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; position 2        
 
 
- >:low_brightness:  (97)hello undefined     :warning: there's nothing after mark until samuel.       
+ >:anger:  (97)hello undefined     :warning: there's nothing after mark until samuel.       
 
 
  >:low_brightness:  hello samuel   &nbsp;&nbsp;&nbsp; position 100    
