--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -66,7 +66,7 @@ Ex: :o:
     hello kyle
     hello butters
 ```  
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  hello hi ho!  &nbsp;&nbsp;&nbsp;// :part_alternation_mark: not part of data in array
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  hello hi ho!  &nbsp;&nbsp;&nbsp;// :part_alternation_mark: not part of data in array
     
 
 The reason that is (**'hello hi ho!'**) because the **greeting**
