--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -16,9 +16,9 @@ object:
 
 };
 ````
-Ex: :o:  
-// good for objects cause objects don't have indices like an array does,
-   instead, they have properties.   
+Ex: 
+:rocket: // good for objects cause objects don't have indices like an array does,
+            instead, they have properties.   :rocket:
 
 
 // grab every property in myObj  :o: 
