--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -21,7 +21,7 @@ Ex:
             instead, they have properties.   :rocket:
 
 
-// grab every property in myObj  :o: 
+// grab every property in myObj  :crossed_flags:
    
    for (var prop in myObj) {
     
@@ -35,7 +35,7 @@ Ex:
         city: 'SouthPark'
    };
    
-   //to get object prop/values :o:
+   //to get object prop/values :crossed_flags:
    
    for (var prop in zObj) {
         console.log(prop + ": " + zObj[prop]);
