--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -39,7 +39,7 @@ Ex:
    //to get object prop/values :round_pushpin:
    
    for (var prop in zObj) {         
-          console.log(prop + ": " + zObj[prop]);     
+        &nbsp;&nbsp;&nbsp;&nbsp;console.log(prop + ": " + zObj[prop]);     
    }
    
    returns: :part_alternation_mark:   
