--- a/1.notesJS/12.2.For-in_Loops.md
+++ b/1.notesJS/12.2.For-in_Loops.md
@@ -42,7 +42,7 @@ Ex:
         &nbsp;&nbsp;&nbsp;&nbsp;console.log(prop + ": " + zObj[prop]);     
    }
    
-   returns: :part_alternation_mark:   
+   returns: :point_down:  
    
    > name: Eric   
    > last: Cartman   
