--- a/1.notesJS/13.Closures.md
+++ b/1.notesJS/13.Closures.md
@@ -1,1 +1,143 @@
 
+### :name_badge: closures  
+
+````
+function makeMultiplier(multiplier) {  
+    
+    // var multiplier = 2;  
+    //wanna know value of multiplier inside b   
+   
+    function b () {  
+       console.log('multiplier is: ' + multiplier);  
+    }   
+    b();
+    
+
+    return (
+            function(num) {
+                return multiplier * num;
+            
+            }
+    ); //return
+
+
+}
+````
+
+:sunrise: **Function makeMultiplier** is going to take a **passed multiplier argument** supplied to it,
+which is going to **return another function** as part of 
+its return value; that returned function is going to **take
+an argument(a number)**, that is going to **multiply it
+using the multiplier** provided in the outer function
+
+
+
+:fuelpump: var doubleAll = makeMultiplier(2); 
+   
+//pass a num 10   
+console.log(doubleAll(10));   
+`returns 20`
+
+
+#### why is value of multiplier 2 inside of b:question:  
+
+- when a function is executed, it gets its own execution
+  context, it gets a 'this' variable, and a reference
+  to its outer environment.   
+  Multiplier not defined inside of b so goes after
+  outer env.; finds it and executes it on b.
+  
+#### return statement inside of makeMultiplier :loudspeaker:
+
+- return statement doesn't really create its own execution environment,
+  because this is not a function execution but just a function
+  value.   
+  
+- it's a function object that gets returned back to
+  the caller of makeMultiplier function.
+- Therefore, it has not execution context, no 'this' variable,
+  and no outer env access.
+
+````
+inside of makeMultiplier function
+   b();
+      
+  
+      return (
+              function(num) {
+                  return multiplier * num;
+              
+              }
+      ); //return
+      
+  }//makeMultiplier
+  
+  then:
+    //return function above goes in var doubleAll
+    
+    var doubleAll = makeMultiplier(2);
+    //multiply by num 10
+    console.log(doubleAll(10));
+    
+````
+
+    var doubleAll is now equal to :
+        
+    
+        return (
+           function(num) {
+              return multiplier * num;
+    
+           }
+        ); //return
+        
+ 
+:trumpet: Only in the NEXT line:
+    
+        console.log(doubleAll(10));
+        
+ is where this function get finally executed. :wind_chime:
+ 
+ > which means, it now has its own execution env, 'this' variable
+   and able to reach out to its outer function/ scope if
+   need be.
+
+
+#### what about the 'multiplier value' :question:
+> this is the mutliplier 2 shown here below again:
+
+````
+var doubleAll = makeMultiplier(2);
+    //multiply by num 10
+    console.log(doubleAll(10));
+````
+Ok, at the time `console.log(doubleAll(10))` is executing,
+the `makeMultiplier` function (the entire function) is no longer in the execution
+stack. It did the return of the function to doubleAll and
+it finished
+
+### :monkey: WAIT, the fun part:
+The reason it still works is because of JS Closures.  :bulb:
+
+Since a function like this returned from inside
+of this function. JavaScript, preserves its outer
+lexical environment memory space for this function.
+
+- When we call doubleAll(10), it will go ahead and execute
+  this function (the return function value, inside of
+  makeMultiplier).
+- Then will create its own execution environment,
+- Look for multiplier variable first in its own
+  exec environment, will not find it, and
+- then will look for this var in its outer environment
+- and this outer memory space will still remain, even
+  though, makeMulitplier function no longer exists.
+  
+
+
+
+
+
+
+
+:100:
