--- a/1.notesJS/13.Closures.md
+++ b/1.notesJS/13.Closures.md
@@ -96,7 +96,7 @@ inside of makeMultiplier function
     
         console.log(doubleAll(10));
         
- is where this function get finally executed. :wind_chime:
+ :dart: is where this function get finally executed. :wind_chime:
  
  > which means, it now has its own execution env, 'this' variable
    and able to reach out to its outer function/ scope if
