--- a/1.notesJS/15.ManipulatingDOM.md
+++ b/1.notesJS/15.ManipulatingDOM.md
@@ -1,10 +1,10 @@
 ## manipulating DOM
 
 ### DOCUMENT Object :page_facing_up:
-The DOCUMENT object represents the entire HTML document.
+:full_moon_with_face: The DOCUMENT object represents the entire HTML document.
 
 ### window.document :page_facing_up:
-returns the document object which contains entire html page.
+:full_moon_with_face: returns the document object which contains entire html page.
 
 ````
 <script> tags on the bottom of the page -after page loads
@@ -157,6 +157,6 @@ to select an element on the page. **ex.: querySelector('#someid')**
 or **querySelector('.someclass')** or **querySelector('h1')**
 
 >**querySelector('h1')** `-->` have they been more than one h1 on the
-above page doc, the would it have picked just the first one. 
+above page doc, then would it have picked just the first one. 
 There's also **queryAllSelector('whatever')** for all.
 
