--- a/1.notesJS/15.ManipulatingDOM.md
+++ b/1.notesJS/15.ManipulatingDOM.md
@@ -19,7 +19,7 @@ console.log(document.getElementById('title');
 
 `<script>` tags on **head section** will return **null**
  cause page not fully loaded by the time it hits 
- the script :round_pushpin:
+ the script. Unless an Event to prevent that from happening been added :round_pushpin:
  
  _`instanceof`_:  :barber:
 
