--- a/1.notesJS/15.ManipulatingDOM.md
+++ b/1.notesJS/15.ManipulatingDOM.md
@@ -66,6 +66,7 @@ The **Document interface** describes the properties/methods
 </html>
 
 ````
+
 output file:  :round_pushpin:
 
 
@@ -78,10 +79,10 @@ output file:  :round_pushpin:
 
 <kbd>I</kbd>  Using **textContent**  for text  
     
-  :ram: step1. grab input value  
-  :bicyclist: step2. set message   
-  :surfer: step3. insert message  
-````
+  :ram: &nbsp; step1. grab input value  
+  :bicyclist: &nbsp; step2. set message   
+  :surfer: &nbsp; step3. insert message  
+
 function sayHello() {
     //get input value
     var name = document
@@ -94,7 +95,7 @@ function sayHello() {
 
 }//sayHello
 
-````
+
     
 <kbd>II</kbd>
 Same but now use H2 tags with **innerHTML** with html tags
