--- a/1.notesJS/15.ManipulatingDOM.md
+++ b/1.notesJS/15.ManipulatingDOM.md
@@ -79,9 +79,9 @@ output file:  :round_pushpin:
 
 <kbd>I</kbd>  Using **textContent**  for text  
     
-  :ram: &nbsp; step1. grab input value  
-  :bicyclist: &nbsp; step2. set message   
-  :surfer: &nbsp; step3. insert message  
+  :ram: &nbsp; step1: grab input value  
+  :bicyclist: &nbsp; step2: set message   
+  :surfer: &nbsp; step3: insert message  
 
 function sayHello() {
     //get input value
