--- a/1.notesJS/17.EventArgument.md
+++ b/1.notesJS/17.EventArgument.md
@@ -5,11 +5,10 @@
 > :golf: exactly **every event handler function gets the event argument** and
 > **DOMContentLoaded**, which **lets you assign events to elements as soon as
   they load**, and **before any images or CSS** is loaded.
+  
 ````
 //Event handling
-document.addEventListener('DOMContentLoaded', 
-        function(event) {
-     
+document.addEventListener('DOMContentLoaded',function(event) {
            function sayHello (event) {
                console.log(event);
                this.textContent = "Said it dont forget it";
