--- a/1.notesJS/17.EventArgument.md
+++ b/1.notesJS/17.EventArgument.md
@@ -49,7 +49,7 @@ etc etc etc
 
 
 > Looking at **Mozilla web events** for mousemove; which
-fires when you have a mouse that is moved, while over
+fires when you have a mouse pointer that is moved, while over
 an element.
 
 > **MouseEvent.shiftKey**, returns true if the shift key was
