--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -4,6 +4,9 @@
 - **H**yper**T**ext **T**ransfer **P**rotocol :bulb:
 - Based on **request**/**response** **stateless** protocol
 
+<hr>
+
+
 :electric_plug: HTTP is **stateless**, meaning that **when a server responds** to
 a **request** from a **browser**, that respond **does not**
 **depend on any previous requests** that the browser made.
@@ -13,7 +16,10 @@ the browser and server communicate, **the server has
 no idea whether or not the client has requested
 anything from it before**.
 
-#### :airplane: client/ server communication
+<hr>
+
+
+### :airplane: client/ server communication
 
 - client opens connection to server
 - client sends HTTP request for a resource
@@ -23,7 +29,7 @@ anything from it before**.
     - sometimes resource not found
 - client closes connection to the server
 
-#### :paperclip: Identifying resources on the web
+### :paperclip: Identifying resources on the web
 
 - **URN**: **uniform resource name** :triangular_flag_on_post:
     - this is a way to uniquely identify a
@@ -43,7 +49,9 @@ anything from it before**.
       resource.    
       **ex.:**   
       **http://www.mysite.com/web_site/index.html**
-    
+
+<hr>
+
 ### :circus_tent: HTTP Request Structure (GET)
 
 ````
@@ -53,9 +61,10 @@ GET /index.html?firstName=Stefano  HTTP/1.1
 > command a browser issues to get at a particular
 resource on a website
 
-:rocket: `This command` is a **URI** and not a URL. This command is
-**only issued once** the **browser** actually **connects to
-the server.**    
+:rocket: `This command` is a **URI** and not a URL.            
+This command is **only issued once** the **browser** actually **connects to
+the server.**             
+
 `So by this point`, we are **already connected** and established a connection to the site.
 `Now`, we are **asking for a URI** within the context of that website. :rocket:   
 > #### :loudspeaker: **and the way we ask for it is using the HTTP protocol**
