--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -61,7 +61,7 @@ GET /index.html?firstName=Stefano  HTTP/1.1
 > command a browser issues to get at a particular
 resource on a website
 
-:rocket: `This command` is a **URI** and not a URL.            
+:rocket: `This command` is a **URI** and not a UR and                 
 This command is **only issued once** the **browser** actually **connects to
 the server.**             
 
