--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -66,7 +66,7 @@ This command is **only issued once** the **browser** actually **connects to
 the server.**             
 
 `So by this point`, we are **already connected** and established a connection to the site.
-`Now`, we are **asking for a URI** within the context of that website. :rocket:   
+`Therefore`, what we are **asking for is a URI** within the context of that website. :rocket:   
 > #### :loudspeaker: **and the way we ask for it is using the HTTP protocol**
 
 :electric_plug: **Browser**, first needs to **make a connection**, and **once** a
