--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -76,7 +76,7 @@ connection is **established starts the HTTP protocol**.
 
 ![GET Request](images/getrequest.png?raw=true "mobile" target="_blank")
      
-### HTTP methods
+### :crossed_flags: HTTP methods
 
 #### GET :key:
 - retrieves the resource
