--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -48,7 +48,7 @@ anything from it before**.
     - a form of URI that provides info on how to get
       resource.    
       **ex.:**   
-      :small_blue_diamond: `http://www.myfreegaragesalead.com/contact.htm`
+      <kbd>-</kbd> `http://www.myfreegaragesalead.com/contact.htm`
 
 <hr>
 
