--- a/1.notesJS/18.HTTP_recap.md
+++ b/1.notesJS/18.HTTP_recap.md
@@ -87,7 +87,65 @@ connection is **established starts the HTTP protocol**.
 - sends data to server in order to be processed
 - data is sent in the message body
 
-> more methods of course. i know f@off
+> more methods avail like PUT and DELETE etc.
+
+
+### typical POST request:phone:
+
+- **no query string** - data we're passing comes
+  as **part of the body of the message**
+- **First line** is the **POST request** itself  
+- **Accept-Charset** is **telling** the **server** that our
+  **browser knows how to process utf-8** character set.
+- the **message body** is where **data is being passed**
+
+
+![POST Request](images/postrequest.png?raw=true "mobile" target="_blank")
+
+ ### HTTP response structure :package:
+     
+- It starts with just a response status line.
+- the response status line has 3 components:
+    - HTTP version (version of HTTP is communicating)
+    - Response Status code
+    - English phrase describing status code
+    - all 3 parts are separated by a single space
+     
+http response structure    
+![HTTP response structure](images/httpresponse.png?raw=true "mobile" target="_blank")
+    
+
+typical http response:     
+![HTTP response structure](images/typicalhttpresponse.png?raw=true "mobile" target="_blank")   
+     
+- **status code** 200 ok  
+- it'll tell you the **content-type** (text/html)
+- **date** of this document
+- the **body** of the message:**html** in this case   
+     
+### Some Response Status Codes
+     
+- 200 OK :postbox:
+    - Ok, here is the content you requested
+- 404 Not Found  :mailbox_with_no_mail:
+    - Server can't find the resource requested
+- 403 Forbidden  :gun:
+    - Unauthenticated client tried to access a
+      secure resource
+- 500 Internal Server Error  :space_invader:
+    - Some unhandled error was raised on the server
+   
+ 
+
+      
+
+
+:100:
+
+
+
+
+
 
 
 
