--- a/1.notesJS/05.Global_n_Local_Scope.md
+++ b/1.notesJS/05.Global_n_Local_Scope.md
@@ -3,17 +3,14 @@
 
 [![N|global](images/globalScope.png)](https://github.com/stefan22/eloqJS/blob/master/eloqJSnotes/5.%20Global_n_Local_Scope.md)
 
-Global and Local Scope (or function scope). To understand Global is to know the difference, so
-lets try to explain it.
+Global and Local Scope (or function scope):
 
-  - Global is where it is first originated (the variable)
-  - Global/local Scope is always going to be related to the execution of some code/function
+  - Global/local Scope is defined by where the variable first originated
+  - Global/local Scope has to do with the execution context of some code/function
   - Generally if var has been set inside of a function, then likely to be local to the function
   
-But to understand Scope, you need to understand that EveryTime a Function/Code block gets Executed,
-it automatically creates its own (a brand new) execution context for that particular function/code, 
-also it creates a $this object and an OUTER context Env; which makes it possible to further reach out, 
-onto a more Outer Var - a more Global one, if it needs to.
+In order to better understand Scope, it's important to know that everytime a Function/Code block gets Executed,
+it automatically creates its own (a brand new) execution context, a $this variable and an OUTER context environment; in case code/function execution originated outside of current scope.
 
 ### Example js file  - Question is what is the value of message when you call function a
 I just explained it here above. But basically, exec a, it also invokes b; which then needs to pick
