--- a/1.notesJS/07.ObjectType.md
+++ b/1.notesJS/07.ObjectType.md
@@ -17,10 +17,11 @@ try this now:
     > Uncaught TypeError:
       Cannot set property 'firstName' of undefined
 ```
-hero company.ceo hasn't been defined yet.
+here company.ceo hasn't been defined yet.
 
 To fix it:
 
+```sh
     company.ceo = new Object();
     company.ceo.firstName = "Mark";
     console.log(company);
@@ -28,24 +29,31 @@ To fix it:
         ceo: Object
              firstName: "Mark"
         name: "Facebook"
-        
+```
+
 Get using dotNotation too:
 
+```sh
     console.log("company ceo is " + company.ceo.firstName);
-
+```
 or 
 
+```sh
     console.log(company["name"]);
     > Facebook
-    
+```
+
 A better way to create/declare an Object:
 
+```sh
     var company = {};
     company.name = "Facebook";
     > Object {name: "Facebook"}
-    
+```
+
 and
 
+```sh
     var company = {
         name: "Facebook",
         ceo: {
@@ -55,3 +63,4 @@ and
         }
     };
     
+```
