--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -1,5 +1,5 @@
 ## Functions are Objects
-Are first-class data types, meaning whatever you
+Are <kbd>first-class data types</kbd>, meaning whatever you
 could do with a variable, or an object; you could
 also do with a function.    
 Functions are objects that have some special properties
@@ -39,7 +39,7 @@ Ex.:
   }//makeMultiplier
   
 ```     
-Then we can do this:
+Then we can do <kbd>this</kbd>:
  
 ```sh 
      var multiplyBy5 = makeMultiplier(5);
@@ -47,7 +47,7 @@ Then we can do this:
      > returns 15
 ```
 
-one more:
+one <kbd>more</kbd>:
 
 ```sh
      var multiplyBy7 = makeMultiplier(7);
