--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -1,7 +1,7 @@
 ## Functions are Objects
-Are <kbd>first-class data types</kbd>, meaning whatever you
-could do with a variable, or an object; you could
-also do with a function.    
+Are <kbd>first-class</kbd> data types, meaning whatever you
+could do with a **variable**, or an **object**; you could
+also do with a **function**.          
 Functions are objects that have some special properties
 to them.
 
