--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -1,9 +1,9 @@
 ## Functions are Objects
 Are <kbd>first-class</kbd> data types, meaning whatever you
 could do with a **variable**, or an **object**; you could
-also do with a **function**.          
-Functions are objects that have some special properties
-to them.
+also do with a **function**.         
+
+#### Functions are objects that have some special properties to them.
 
 - you could pass it around as an argument
 - assign it to a variable
