--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -5,8 +5,8 @@ also do with a **function**.
 
 #### Functions are objects that have some special properties to them.
 
-- you could pass it around as an argument
-- assign it to a variable
+- you could pass it around as an argument :rocket:
+- assign it to a variable :rocket:
 
 Ex.:
 ```sh
