--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -25,7 +25,7 @@ Ex.:
     > v.1.10
 ```
     
-### function factory
+### function factory :card_index:
 > notice arguments, returning inner function
 
 ```sh
