--- a/1.notesJS/08.FunctionsRObjects.md
+++ b/1.notesJS/08.FunctionsRObjects.md
@@ -56,7 +56,7 @@ one <kbd>more</kbd>:
      returns 56
 ```
 
-### passing functions as arguments
+### passing functions as arguments :memo:
 > notice x
 
 ```sh
