--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -1,6 +1,6 @@
 
 
-# jHUnivJS
+# types  :crossed_flags:
 
 
 - Browsers JS engine is a single threaded engine
@@ -43,6 +43,7 @@ calls function A - also in global scope.
 Sets x = 5 and calls
 B() that returns console.log(x)
 
+```sh
 	A: x = 2
 
 	What matters is its Outer Reference value (every function return -above a ref
@@ -52,6 +53,7 @@ B() that returns console.log(x)
 	Function B is going to look in Function A and since it didn't orignate
 	there is going to use its outer Scope to look further.
 
+```
 
 
 
@@ -81,8 +83,8 @@ B() that returns console.log(x)
 
   - right off the top you know then that:
   		
-  		its not an object - even the simplest object is a collection
-	  	of name-value pair
+      -	its not an object - even the simplest object is a collection
+	of name-value pair
 
   - Once is set, it becomes read-only!
   - You can create another value based on an existing value, but the 
@@ -134,9 +136,11 @@ B() that returns console.log(x)
 
  - example  =>called Type COERCION.
 
-        When the javascript interpreter tries to compare this equality, it converts
-        one of the types to be the same type as the other variable, and only then
-        compares the values.
+      When the javascript interpreter tries to compare this equality, it converts
+      one of the types to be the same type as the other variable, and only then
+      compares the values.
+
+```sh
 
         var x= 4, y='4';
     
@@ -147,6 +151,7 @@ B() that returns console.log(x)
     
     
         }
+```
 
  Type Coercion = > means that the language converts something from one type
  to another type automatically - on the fly.
@@ -158,6 +163,7 @@ the strict equality. (===)
 
 ###  Things IF Statement would consider False
 
+```sh
     if (false || null || undefined || "" || 0 || Nan) {
 
       console.log('this line wont ever execute');
@@ -165,6 +171,7 @@ the strict equality. (===)
     } else {
       console.log("All false");
     }  
+```
 
 false are => false, null, undefined, ""(empty string), 0 Nan
 
@@ -182,12 +189,13 @@ Note =>  You can do this to double check whether the boolean suppose to evaluate
 
 For comparisson purposes true is:
 
+```sh
     if (true && "hello" && 1 && -1 && 'false') {
 
         console.log('all true');
 
     }
-
+```
 
 
   true, &&, 1,
