--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -14,10 +14,10 @@
 
 - function without return keyword won't return shait
 
-- All arguments in functions are optionals even when they don't make sense having
+- **All arguments in functions are optionals** even when they don't make sense having
   or not having them - just as far as syntax goes!
 
-- 2 Scopes in Js: Global scope and Local Scope (Function Scope) - There's no block
+- 2 Scopes in Js: **Global scope and Local Scope** (Function Scope) - There's no block
   scope in JS.  Unlike some other languages where curly braces signify a new Scope;
   here only a Function signify a new Scope.
 
@@ -26,7 +26,7 @@
 
 ## Scope Chain - pretty important  HUGE!!
 
-Executing a Function creates a new Execution Context!    
+**Executing a Function creates a new Execution Context!**    
 
 Each exec context has:   
 
