--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -24,7 +24,7 @@
 
 <br/>
 
-## Scope Chain - pretty important  HUGE!!
+## Scope Chain - pretty important!!
 
 **Executing a Function creates a new Execution Context!**    
 
