--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -28,7 +28,7 @@
 
 **Executing a Function creates a new Execution Context!**    
 
-Each exec context has:   
+Each exec context has:    :triangular_flag_on_post:
 
 -	It's own variable Environment
 -	special 'this' object and
@@ -61,16 +61,14 @@ B() that returns console.log(x)
 
 
 
-- A type is a particular data structure and
-  Built-in types can be used to build other data structures
-
-- JS has 7 built-in types:
+#### JS has 7 built-in types: :barber:
 		
   - 6 primitive and
   - 1 Object type
 
 
-- Object type     
+- Object type  :golf:
+
   -  is a collection of name/value pairs and 
   -	 it can be a nested value like that
 
