--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -4,11 +4,11 @@
 
 
 - Browsers JS engine is a single threaded engine
-	- Once starts running, it will not stop until is done executing
+	- Once **starts running**, it will **not stop** until is done **executing**
 	- Sequential execution
 
-- On a function expression, the variable name returns the actual
-  function, and not the result
+- On a **function expression**, the variable name **returns** the **actual
+  function**, and not the result
 
   ![s1](images/f1.png?raw=true "s1")
 
