--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -37,9 +37,8 @@ Each exec context has:    :triangular_flag_on_post:
 
    ![s2](images/s2.png?raw=true "s2")
 
-
 :icecream: Function A define in Global Scope, sets x = 2     
-:icecream: :icecream: and calls function A - also in global scope.       
+:icecream: :icecream: and calls function B - also in global scope.       
 :icecream::icecream::icecream: Sets x = 5 and calls B() that returns console.log(x)
 
 ```sh
