--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -80,13 +80,13 @@ Each exec context has:    :triangular_flag_on_post:
 
   - right off the top you know then that:
   		
-      -	its not an object - even the simplest object is a collection
-	of name-value pair
+      -	its not an object - **even the simplest object is a collection
+	of name-value pair**  :triangular_flag_on_post:
 
-  - Once is set, it becomes read-only!
+  - **Once** is **set**, it becomes **read-only!**  :oden:
   - You can create another value based on an existing value, but the 
-  - memory space allocated for the first item does not change - it creates
-  - another memory space.
+  - **memory space** allocated for the first item **does not change** - it creates
+  - another memory space.  :hammer:
 
   
 	  
@@ -97,14 +97,14 @@ Each exec context has:    :triangular_flag_on_post:
 
 - Primitive type: Undefined
 
-  - Signifies that no value has ever been set
+  - Signifies that **no value has ever been set**  :mushroom:
   - Undefined is the value that every variable gets when js engine
     sets up the value in memory but not assigned a value yet.
 
 
 - Primitive type: Null
 
-  - Null signifies the lack of value
+  - Null signifies the **lack of value**  :mushroom:
   - undefined not assigned a value, nulls lacks value
   - both are primitive types
 
@@ -131,11 +131,11 @@ Each exec context has:    :triangular_flag_on_post:
 
 
 
- - example  =>called Type COERCION.
+ - example  =>called Type **COERCION**.  :dragon:
 
-      When the javascript interpreter tries to compare this equality, it converts
+      When the javascript **interpreter** tries to **compare** this equality, it **converts
       one of the types to be the same type as the other variable, and only then
-      compares the values.
+      compares the values**.  :mushroom:
 
 ```sh
 
