--- a/1.notesJS/02.Undefined.md
+++ b/1.notesJS/02.Undefined.md
@@ -1,17 +1,20 @@
-## Undefined
+## Undefined   :paw_prints:
 
 var x;   
 console.log(x);   
 `returns undefined`
 
+```sh
     if (x == undefined) {   
        console.log('x is undefined');   
     }
     // x is undefined   
-  
+```
+
 var x = 5;   
 `returns 5`
-   
+
+```sh
     if (x == undefined) {
         console.log('x is undefined');
     }
@@ -19,34 +22,40 @@ var x = 5;
         console.log('x is defined');
     }
     // x is defined
+```
 
+Now try this:   :full_moon_with_face:
 
-Now try this:   
-
+```sh
     console.log(r)
     // Uncaught ReferenceError: r is not defined
-    
-#### undefined is NOT the SAME as not defined
-console.log(r) should it have returned `undefined`
+```
+
+#### undefined is NOT the SAME as not defined  :first_quarter_moon_with_face:
+
+console.log(r) should it have returned `undefined`        
 but instead returns `not defined`
-#### Reason is:
-`undefined` in JavaScript has a special meaning:    
-- it has been declared but
-- value has not been yet set
+
+#### Reason is:  :waning_gibbous_moon:
+`undefined` in JavaScript has a special meaning:    :crescent_moon:
+- it has been **declared** but
+- **value** has **not** been yet **set**
 
 Here for example:    
 
+```sh
     var r;    
     console.log(r);   
-   
-In this case, the variable has been declared and
-a memory space has been allocated for it, but no
-value has been placed in that memory space.
-     
-     
-    
-    
+```
 
+In this case, the **variable** has been **declared** and
+a **memory space** has been **allocated** for it, **but** **no**
+**value** has been **placed** **in** that **memory space**.
+     
+     
+    
+    
+:100:
 
 
 
