--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -195,10 +195,12 @@ For comparisson purposes true is:
 ```
 
 
-  true, &&, 1,
 
-  Any number that is non-zero will evaluate to true
-  string 'false' will evaluate to true since isn't a non empty string 
+ - Any **number that is non-zero** will evaluate to **true**     
+ - **string 'false'** will evaluate to **true** since isn't a non empty string 
+ 
+ 
+ :100:
 
 
 
