--- a/1.notesJS/01.Types.md
+++ b/1.notesJS/01.Types.md
@@ -197,7 +197,7 @@ For comparisson purposes true is:
 
 
  - Any **number that is non-zero** will evaluate to **true**     
- - **string 'false'** will evaluate to **true** since isn't a non empty string 
+ - **string 'false'** will evaluate to **true** since is a non empty string 
  
  
  :100:
