--- a/1.notesJS/03.Nan_strict.md
+++ b/1.notesJS/03.Nan_strict.md
@@ -1,4 +1,4 @@
-## NaN
+## NaN  :seedling:
 
 - console.log(5 + 4 / 3);   
 `returns 3`
@@ -6,54 +6,57 @@
 - console.log(undefined / 5);    
 `returns NaN;`
 
-or  also `returns NaN`  
+or  also **returns NaN**  
 
+```sh
      function test1 (a) {
         console.log(a/5);
      }
      test1();
-     
-When u debug your code and call a function, and
-somewhere inside the function something starts
-throwing a NaN, chances are that was something that
-was supposed to be passed into that function.
+```
 
-## Strict Equality
-````
+:collision: When u **debug** your code and **call a function**, and
+somewhere inside the function **something starts
+throwing a NaN**, chances are that was **something that
+was supposed to be passed** into that function.
+
+## Strict Equality :star:
+```sh
     var x=4, y='4';
 
     if (x == y) {
         console.log(x,y);
     }
     returns 4,"4" and true
-````
+```
+
 Eventhough string can't be possibly be equal to a 
-number - what's going on is type coercion. The language
-converts something from one type to another on the
+number - what's going on is **type coercion**. The **language
+converts something from one type to another** on the
 fly.    
-JavaScript prior to evaluate equality converts,
-one type to be the same as the other variable first,
+**JavaScript prior to evaluate equality converts,
+one type to be the same as the other variable first**,
 and only then compares the variables.
 
-If you don't like that then there is: **Strict
-Equality.**
+If you don't like that then there is: **Strict Equality.**    :star2:
 
-````
+```sh
     var x=4, y='4';
 
     if (x === y) {
         console.log(x,y);
     }
     returns 4,"4" and false
-````
-Now JavaScript won't make sure that they are of
-the same type before it makes comparison. If they
+```
+
+**Now JavaScript won't make sure that they are of
+the same type before it makes comparison**. If they
 are not of the same type, then the interpreter wont
 go any further.
 
 ## What JS considers to be Boolean true and Boolean false
 
-###false:
+### false: :shit:
 
 - false
 - null
@@ -62,7 +65,7 @@ go any further.
 - 0
 - NaN
 
-````
+```sh
     if (false || null || undefined || "" || 0 || NaN) {
       console.log("this line will never execute");
     } else {
@@ -70,30 +73,31 @@ go any further.
       
     }   // returns All false
  
-````
+```
  
 
-### true:
+### true: :sunny:
 
 - true
 - 1
 - -1
 - "false"
 
-````
+```sh
     if (true && "hello" && 1 && -1 && "false") {
         console.log("All true");
         
     } //returns All true
 
-````
+```
 
 
 ### If you're not sure whether is true or false
-Use the Boolean object.
+Use the Boolean object. :snowman:
 
 Ex:
 
+```sh
     Boolean(null);
     > returns false
     
@@ -103,8 +107,10 @@ Ex:
     Boolean("hello world");
     > returns true
     
-### Curly brace on same line or next line. Is it just style?
+```
 
+### Curly brace on same line or next line. Is it just style   :question:
+```sh
     function a() 
     {
        return   // it ends right here!
@@ -118,15 +124,25 @@ Ex:
             name: "Stefano"
         }
     }
-    
- console.log(a());    
-` //returns undefined `   
-It looks at return and since it's returning 
-nothing returns undefined.    
-  
- console.log(b());       
-` //returns Object {name: "Stefano"}`
+```
 
+    
+console.log(a());    
+
+```sh
+//returns undefined    
+```
+
+It looks at **return** and **since** it's **returning** 
+**nothing** returns **undefined**.    
+  
+console.log(b());       
+```sh
+//returns Object {name: "Stefano"}
+```
 
 summary
 ![summary](images/strict.png?raw=true "mobile" target="_blank")
+
+
+:100:
