--- a/1.notesJS/04.Default_Values.md
+++ b/1.notesJS/04.Default_Values.md
@@ -1,6 +1,8 @@
-## Default Values
+## Default Values  :thumbsup:
+
 ex1    
 
+```sh
     function orderChickenWith(sidedish) {
        console.log("Chicken with " + sidedish);
     }
@@ -11,27 +13,44 @@ ex1
     > Chicken with noodles
     > Chicken with undefined
     
+    
+```
+
 ex2 
 
+```sh
     function orderChickenWith(sidedish) {
         if (sidedish === undefined) {
             sidedish = "whatever";
         }
     }
     
-ex3    
-#### better way is:       
-since no value passed for sidedish
-    it gets coarced into a boolean => false
-    then the second value gets evaluated
     
+```
+
+
+ex3
+
+#### better way is:    :ok_hand:   
+
+since no value passed for sidedish
+it gets coarced into a boolean => false
+then the second value gets evaluated
+
+```sh
     function orderChickenWith(sidedish) {
         sidedish = sidedish || "whatever";
         console.log("Chicken with " + sidedish);
     }
     
+    
+```
+
+    
 ####  whatever coerces to true first:     
- -   true || false
+
+
+-   true || false
     -   returns true
  
  -   "" || true        
@@ -45,3 +64,4 @@ since no value passed for sidedish
  
     
     
+:100:
