--- a/1.notesJS/04.Default_Values.md
+++ b/1.notesJS/04.Default_Values.md
@@ -51,13 +51,13 @@ then the second value gets evaluated
 
 
 -   true || false
-    -  returns true
+    -  **returns** true
  
 -   "" || true        
-    -  return true
+    -  **returns** true
     
 -   "hello" || ""    
-    -  returns "hello"    
+    -  **returns** "hello"    
  
  
  
